--- a/css/BricksPain.css
+++ b/css/BricksPain.css
@@ -1,5 +1,7 @@
 a{
     text-decoration: none;
     font-size: large;
-    color: darkblue;
+    color: lawngreen;
+    background-color: black;
+    border-radius: 5px;
 }
